# django-upload-to

./: .gitignore  .pre-commit-config.yaml  .python-version  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  manage.py  mkdocs.yml  pyproject.toml  search.html  tox.ini  upload_to.py
.github/workflows/: check.yml  code-quality.yml  pull_request.yml  release.yml  test.yml
docs/: explanation.md  how-to-guides.md  index.md  reference.md  tutorials.md
explanation/: index.html
how-to-guides/: index.html
reference/: index.html
search/: search_index.json
tests/: settings.py  test_base.py  test_validators.py
tutorials/: index.html
upload_to/: __init__.py  validators.py
