[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py36,py37,py38,py39,py310,py311
[testenv]
require_locked_deps = true
install_dev_deps = true
whitelist_externals = poetry
commands =
    poetry install
    poetry run pytest
"""

[tool.poetry]
name = "django-upload-to"
version = "0.1.0"
description = "It generates dynamically a directory path and a file name for Django FileField"
authors = ["Valberto <valbertovc@gmail.com>"]
readme = "README.md"
repository = "https://github.com/valbertovc/django-upload-to"
classifiers=[
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia",
]
keywords=["django", "file", "media", "upload"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/valbertovc/django-upload-to/issues"

[tool.poetry.dependencies]
python = "^3.7.0"
Django = "^3.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"
tox = "^3.24.4"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "import-error",
]
