[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "upload_to"
version = "0.1.0"
description = "It generates dynamically a directory path and a file name for Django FileField"
authors = ["Valberto <valbertovc@gmail.com>"]
readme = "README.md"
repository = "https://github.com/valbertovc/django-upload-to"
classifiers=[
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia",
]
keywords=["django", "file", "media", "upload"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/valbertovc/django-upload-to/issues"

[tool.poetry.dependencies]
python = "^3.7.0"
Django = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"
tox = "^4.4.5"
coverage = {extras = ["toml"], version = "^7.1.0"}

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "import-error",
]

[tool.coverage.paths]
source = ["upload_to"]

[tool.coverage.run]
branch = true
source = ["upload_to"]

[tool.coverage.report]
show_missing = true
fail_under = 100
