[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-upload-to"
version = "0.3.0"
description = "It generates dynamically a directory path and a file name for Django FileField"
authors = ["Valberto Carneiro <valbertovc@gmail.com>"]
readme = "README.md"
repository = "https://github.com/valbertovc/django-upload-to"
classifiers=[
    "Development Status :: 4 - Beta",
    "Framework :: Django :: 2",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords=["django", "file", "media", "upload"]
packages = [
    { include = "upload_to" }
]
include = [
"LICENSE",
]

[tool.poetry.urls]
"Homepage" = "https://valbertovc.github.io/django-upload-to/"
"Source" = "https://github.com/valbertovc/django-upload-to"
"Bug Tracker" = "https://github.com/valbertovc/django-upload-to/issues"
"Changelog" = "https://github.com/valbertovc/django-upload-to/releases"

[tool.poetry.dependencies]
python = ">=3.8,<4"
Django = ">=2.2.0,>=3.0.0,>=4.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.15.0"
tox = "^4.4.5"
coverage = {extras = ["toml"], version = "^7.1.0"}
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.6"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "import-error",
]

[tool.coverage.paths]
source = ["upload_to"]

[tool.coverage.run]
branch = true
source = ["upload_to"]

[tool.coverage.report]
show_missing = true
fail_under = 100
